Add signup with CAPTCHA, admin user management, and fix java compiler warnings